objects/AOPS_Flag__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_DB_TimeStamp__c</fullName>
        <label>AOPS DB TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AopsId__c</fullName>
        <externalId>true</externalId>
        <label>AopsId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AopsSeqId__c</fullName>
        <label>AopsSeqId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLSetUpFlag__c</fullName>
        <label>CSLSetUpFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBStampMillisec__c</fullName>
        <label>DBStampMillisec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBStamp__c</fullName>
        <label>DBStamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNSFlag__c</fullName>
        <label>DNSFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSetUpFlag__c</fullName>
        <label>OrderSetUpFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyToOrderFlag__c</fullName>
        <label>ReadyToOrderFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedirectFlag__c</fullName>
        <label>RedirectFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserSetUpFlag__c</fullName>
        <label>UserSetUpFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AOPS Flags</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>AOPS Flag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOPS Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>